<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/section_list_item"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/section_name_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Section: "
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_brown"
                android:background="@drawable/section_item_text"/>

            <TextView
                android:id="@+id/instructor_name_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Instructor: "
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_brown"
                android:background="@drawable/section_item_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/section_item_text">

            <TextView
                android:id="@+id/times_values_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="left"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Times:\n"
                android:textColor="@color/dark_brown"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location_name_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location: "
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_brown"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/capacity_number_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Capacity: "
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_brown"
                android:background="@drawable/section_item_text"/>

            <TextView
                android:id="@+id/available_number_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available: "
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_brown"
                android:background="@drawable/section_item_text"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>