...
        android:orientation="vertical"
        android:background="@color/cosmic_latte"
        android:layout_weight="1"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/hint_for_user_name_text_box_in_log_in_page"
            android:inputType="text"
            android:paddingStart="10dp"
...
            android:layout_marginBottom="10dp"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="180dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/hint_for_password_text_box_in_log_in_page"
            android:inputType="textPassword"
            android:paddingStart="10dp"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text_in_main_activity"
                android:textSize="18sp"
                android:layout_marginStart="180dp"
                android:textAlignment="center"
...
