...
        android:textSize="24sp"
        android:textColor="@color/dark_brown"
        android:fontFamily="serif"
        android:text="@string/prompt_message_for_select_section_days_dialog"/>

    <ListView
        android:id="@+id/to_select_days_from_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/done_selecting_days_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/done_selecting_Section_days_btn_text_for_select_section_days_dialog"
        android:textAllCaps="false"
...
