<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@color/cosmic_latte"
    android:baselineAligned="false">

        <ListView
            android:id="@+id/listSections"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

</LinearLayout>
