<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/student_landing_page">

    <FrameLayout
        android:id="@+id/student_home_summary"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="500dp">

                    <ListView
                        android:id="@+id/student_required_courses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cosmic_latte"
                        android:nestedScrollingEnabled="true"/>

                    <TextView
...
