...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/section_item_text">

            <TextView
                android:id="@+id/course_code_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="left"
                android:paddingLeft="10dp"
...
